# hardware-hub

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS_FOR_AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: __init__.py  database.py  main.py  models.py  schemas.py  security.py
backend/routers/: __init__.py  admin.py  ai.py  auth.py  hardware.py  rentals.py
backend/services/: __init__.py  ai_service.py  bootstrap.py  rental_service.py
docs/: ARCHITECTURE.md  seed.json
frontend/: Dockerfile  RAILWAY.md  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  nginx.public.conf.template  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: client.js
frontend/src/composables/: useDashboardAiSearch.js  useDelayedTableLoading.js  useSeedImporter.js
frontend/src/router/: index.js
frontend/src/views/: AdminView.vue  DashboardView.vue  LoginView.vue  MyRentalsView.vue
tests/: __init__.py  test_ai_service.py  test_auth.py  test_logic.py  test_rental_schema.py  test_sanitize_sql.py
